Time change function implementation